tests/errors/prefix_string_02.py
from lpython import i32

# fix difference between lpython and cpython in prefix string grammar
# Prefix should be attached to the quote with any whitespace.

def main():
	print(r "Hello World")

main()